# A7672S-4G-Dev-Board

./: .gitignore  CMakeLists.txt  file_list.txt  old_fw_Makefile  sc_application.c  view.html
config/: .config  A7672G_LABE_1603_V202_OPENSDK_linkscript.ld  A7672S_FASE_1603_V101_OPENSDK_linkscript.ld  Kconfig  ToolChain.cmake  ToolChain.mak  buildCusLib.mak  buildOptions.cmake  image.mak  make_image_16xx.mak  make_image_16xx_settings.mak  package.mak  userspaceConfig.h  userspaceConfig.h.in
kernel/A7672S_FASE_1603_V101_OPENSDK/: KernelDefinitions.cmake  KernelDefinitions.h  KernelDefinitions.mak  KernelDefinitions.txt  kernel_link_define.mak
kernel/A7672S_FASE_1603_V101_OPENSDK/aboot/config/flash/: QSPI_NAND_128MB_B128KB_S128KB_P2KB.json
kernel/A7672S_FASE_1603_V101_OPENSDK/aboot/config/partition/: ASR1603_SINGLE_FLASH_LAYOUT_08MB_WALNUT_OPENSDK.json  ASR1603_SINGLE_FLASH_LAYOUT_16MB_BT.json  ASR1603_SINGLE_FLASH_LAYOUT_16MB_BT_ASR5311.json  ASR1603_SINGLE_FLASH_LAYOUT_16MB_BT_UC6228.json  ASR1603_SINGLE_FLASH_LAYOUT_16MB_BT_UC6228_OPENSDK.json  ASR1603_SINGLE_FLASH_LAYOUT_16MB_RU_OPENSDK.json  ASR1603_SINGLE_FLASH_LAYOUT_16MB_TOPFLY_OPENSDK.json  ASR1603_SINGLE_FLASH_LAYOUT_16MB_UCVSIM.json  ASR1603_SINGLE_SIM_VOLTE_FLASH_LAYOUT_UC6228_LARGENVM.json  ASR1603_SINGLE_SIM_VOLTE_FLASH_LAYOUT_UC6228_OPENSDK.json  ASR1603_SINGLE_SIM_VOLTE_FLASH_LAYOUT_ULTRASTAR.json
kernel/A7672S_FASE_1603_V101_OPENSDK/aboot/config/product/: ASR_CRANEM_EVB.json
kernel/A7672S_FASE_1603_V101_OPENSDK/aboot/config/template/: ASR1603_TEMPLATE_08MB_BT.json  ASR1603_TEMPLATE_08MB_NVM_OPENSDK.json  ASR1603_TEMPLATE_08MB_UCVSIM.json  ASR1603_TEMPLATE_16MB.json  ASR1603_TEMPLATE_16MB_BT.json  ASR1603_TEMPLATE_16MB_BT_UC6228_NVM_OPENSDK.json  ASR1603_TEMPLATE_16MB_UC6228_OPENSDK.json
kernel/A7672S_FASE_1603_V101_OPENSDK/aboot_factory/config/flash/: SPI_NOR_4MB_B64KB_S4KB_P256.json
kernel/A7672S_FASE_1603_V101_OPENSDK/aboot_factory/config/partition/: ASR1603_SINGLE_FLASH_LAYOUT_08MB_APP_512KB_OPENSDK.json  ASR1603_SINGLE_FLASH_LAYOUT_08MB_OPENSDK.json  ASR1603_SINGLE_FLASH_LAYOUT_08MB_UCVSIM.json  ASR1603_SINGLE_FLASH_LAYOUT_08MB_XYZL_OPENSDK.json  ASR1603_SINGLE_FLASH_LAYOUT_16MB_BT_ASR5311_RU_OPENSDK.json  ASR1603_SINGLE_FLASH_LAYOUT_16MB_UC6228.json  (+7 more)
public_libs/miracl/: miracl.h  mirdef.h
public_libs/sm2/: sm2.h  sm3.h
sc_demo/V1/: CMakeLists.txt
sc_demo/V1/inc/: app_version.h  demo_lcd.h  simcom_demo.h  uart_api.h
sc_demo/V1/src/: cus_urc.c  cus_usb_vcom.c  demo_app_download.c  demo_app_updater.c  demo_audio.c  demo_ble.c  demo_bt.c  demo_bt_stack.c  demo_call.c  demo_cam.c  demo_cam_dirver.c  demo_cjson.c  demo_crypto.c  demo_exfs.c  demo_file_system.c  demo_flash.c  demo_fota.c  demo_ftps.c  demo_ftps_test.c  demo_gpio.c  demo_gps.c  demo_htp.c  demo_https.c  demo_i2c.c  demo_lcd.c  demo_loc.c  demo_loc_test.c  demo_mbedtls.c  demo_mqtt.c  demo_network.c  demo_ntp.c  demo_onewire.c  demo_ping.c  demo_pm.c  demo_poc.c  demo_pppd.c  demo_pwm.c  demo_rtc.c  demo_simcard.c  demo_sjdr.c  (+17 more)
sc_demo/V2/: CMakeLists.txt  simcom_demo_init.c  simcom_demo_init.h
sc_demo/V2/inc/: ble_gatt_demo.h  demo_api_test.h  demo_app_download.h  demo_app_updater.h  demo_audio.h  demo_bt.h  demo_call.h  demo_file_system.h  demo_flash.h  demo_fota.h  demo_ftps.h  demo_gpio.h  demo_gps.h  demo_https.h  demo_network.h  demo_pm.h  demo_poc.h  demo_pwm.h  demo_rtc.h  demo_sms.h  demo_ssl.h  demo_tcpip.h  demo_tts.h  demo_uart.h  demo_wifi.h  demo_zlib.h  uart_api.h
sc_demo/V2/src/: cus_usb_vcom.c  demo_api_test.c  demo_app_download.c  demo_app_updater.c  demo_audio.c  demo_ble.c  demo_bt.c  demo_bt_stack.c  demo_call.c  demo_cjson.c  demo_debug.c  demo_extnandflash.c  demo_extnorflash.c  demo_file_system.c  demo_flash.c  demo_fota.c  demo_ftps.c  demo_gpio.c  demo_gps.c  demo_htp.c  demo_https.c  demo_i2c.c  demo_loc.c  demo_mqtt.c  demo_network.c  demo_ntp.c  demo_ping.c  demo_pm.c  demo_poc.c  demo_pwm.c  demo_rtc.c  demo_simcard.c  demo_sjdr.c  demo_sms.c  demo_spi.c  demo_ssl.c  demo_system.c  demo_tcpip.c  demo_tts.c  demo_uart.c  (+5 more)
sc_demo/examples/mqtt/: mqtt_aliauth_dynreg.c
sc_demo/old_fw/: demo.c
sc_lib/A7672E_FASE_1603_V101_OPENSDK/inc/: api_map.h  sc_flash.h  sc_power.h  sc_spi.h  scfw_socket.h  scfw_socket_define.h  simcom_api.h  simcom_bt_stack.h  simcom_call.h  simcom_dspgain.h  simcom_gpio.h  simcom_gps.h  simcom_https.h  simcom_network.h  simcom_os.h  simcom_ssl.h  simcom_uart.h  simcom_usb_vcom.h  simcom_wifi.h  simcom_wtd.h
sc_lib/A7672G_LABE_1603_V202_OPENSDK/inc/: api_map.h  sal_netif.h  sc_app_download.h  sc_app_update.h  scfw_inet.h  scfw_inet_define.h  scfw_netdb.h  scfw_socket_errno.h  simcom_api.h  simcom_debug.h  simcom_file_system.h  simcom_fota.h  simcom_fota_download.h  simcom_loc.h  simcom_pwm.h  simcom_rtc.h  simcom_simcard.h  simcom_system.h
sc_lib/A7672S_FASE_1603_V101_OPENSDK/inc/: api_map.h  pl_crypto.h  sc_i2c.h  simcom_audio.h  simcom_auth_api.h  simcom_file.h  simcom_htp_client.h  simcom_mqtts_client.h  simcom_ntp_client.h  simcom_ping.h  simcom_sms.h
sc_lib/A7672S_LASE_1603_V101_OPENSDK/inc/: api_map.h  scfw_netdb_define.h  simcom_at.h  simcom_common.h  simcom_ftps.h  simcom_pm.h  simcom_poc.h  simcom_sjdr.h  simcom_tcpip.h  simcom_tts.h
sc_lib/V2/: CMakeLists.txt
sc_lib/V2/PL/: demo_protocol_parser.h
sc_lib/V2/Pub/: pub_cache.h  pub_list.h  pub_math.h  pub_string.h
sc_lib/V2/SAL/: sal_log.h  sal_os.h
sc_lib/inc/: simcom_cam_common.h  simcom_tcpip_old.h  simcom_tts_api.h  simcom_types_old.h
sc_lib/inc/GPIO/: A7602E_H_TAME_GPIO.h  A7605C1_MAVX_V201_GPIO.h  A7605C_R2_GPIO.h  A7608SA_H_TABE_GPIO.h  A7630C_LANS_GPIO.h  A7670C_BANS_GPIO.h  A7670C_FANS_GPIO.h  A7670C_MANS_LANS_GPIO.h  A7670C_V8_GPIO.h  A7670SA_V101_GPIO.h  A7671_V101_GPIO.h  A7673G_V201_GPIO.h  A7676E_GPIO.h  A7678_V102_GPIO.h  A7680C_LANS_GPIO.h  A7680C_V801_GPIO.h  A7680C_V901_GPIO.h  A7680E_V905_GPIO.h  A7682EC_V102_GPIO.h  A7683E_V102_GPIO.h  A7690C_LANV_V102_GPIO.h  A7690C_V201_GPIO.h  A7690C_V301_GPIO.h  A7690C_V606_GPIO.h
sc_lib/inc/token/: onenet_hmac_sha1.h  onenet_md5.h  token.h
(+9 files in other folders)
